<resources>
    <string name="app_name">Body Tuner Demo</string>
    <string name="adjust">Adjust</string>
    <string name="_0">0</string>
    <string name="body_tuner">Body Tuner</string>
    <string name="keo_vung_chon">Drag the gray area to elongate legs</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="max_size">Reached stretching limit</string>
</resources>